# quick-https

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  server-bad.py  server.py  setup.cfg
.github/workflows/: lint.yml
certs/: .gitignote
example_cert/: certfile.crt  keyfile.key
https/: .gitignore  CustomHTTPRequestHandler.py  HTTPSServer.py  __init__.py  server.py
tests/: test_httpsserver_functions.py  test_httpsserver_object.py  test_server.py
