[metadata]
name = quick-https
version = 0.0.5
description = Expanding python's simpleHTTPServer to use HTTPS
author = samfelt
url = https://github.com/samfelt/simpleWebServer
license_files = LICENSE.txt
description-file = README.md
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:
install_requires =
    cryptography>=37.0.4

[options.packages.find]
exclude = tests*
